--- a/ecommerce-react/package.json
+++ b/ecommerce-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "browser-router": "^0.2.0",
+    "mongodb": "^3.1.10",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
